# bileScripture

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements-dl-gpu.txt  requirements-dl.txt  requirements-ml.txt  requirements.txt
.pre-commit-template/hooks/: pre-commit
docker/: Dockerfile
src/bile_scripture/serving/: api.py
src/bile_scripture/utils/: __init__.py  config_utils.py  image_utils.py  quality_metrics.py
tests/: test_health.py  test_utils.py
